--- a/www/index.html
+++ b/www/index.html
@@ -31,15 +31,22 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/controller.js"></script>
+    <script src="js/routes.js"></script>
   </head>
   <body ng-app="starter">
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+        <h1 class="title">Pokedex-App</h1>
       </ion-header-bar>
-      <ion-content>
-      </ion-content>
+      <ion-nav-view>
+        <ion-nav-bar class="bar-positive">
+          <ion-nav-back-button></ion-nav-back-button>
+          <ion-nav-title>Pokemón</ion-nav-title>
+        </ion-nav-bar>
+      </ion-nav-view>
+      <ion-footer-bar>subCUBE + VHGames</ion-footer-bar>
     </ion-pane>
   </body>
 </html>
