--- a/www/index.html
+++ b/www/index.html
@@ -31,15 +31,18 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+
+    <script src="js/routes.js"></script>
+    <script src="js/controllers/listaPokemons.controller.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="starter" ng-controller="ListaPokemonsController">
 
     <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
+      <ion-nav-view>
+        <ion-nav-bar class="bar bar-positive">
+          <ion-nav-back-button></ion-nav-back-button>
+        </ion-nav-view>
+      </ion-nav-view>
     </ion-pane>
   </body>
 </html>
