--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/app.js"></script>
 
     <script src="js/routes.js"></script>
+    <script src="js/service.js"></script>
     <script src="js/controllers/listaPokemons.controller.js"></script>
   </head>
   <body ng-app="starter" ng-controller="ListaPokemonsController">
