--- a/www/index.html
+++ b/www/index.html
@@ -31,19 +31,23 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-
     <script src="js/routes.js"></script>
     <script src="js/service.js"></script>
     <script src="js/controllers/listaPokemons.controller.js"></script>
   </head>
-  <body ng-app="starter" ng-controller="ListaPokemonsController">
+  <body ng-app="starter">
 
     <ion-pane>
+      <ion-header-bar class="bar-stable">
+        <h1 class="title">Pokedex-App</h1>
+      </ion-header-bar>
       <ion-nav-view>
-        <ion-nav-bar class="bar bar-positive">
+        <ion-nav-bar class="bar-positive">
           <ion-nav-back-button></ion-nav-back-button>
-        </ion-nav-view>
+          <ion-nav-title>Pokemón</ion-nav-title>
+        </ion-nav-bar>
       </ion-nav-view>
+      <ion-footer-bar>subCUBE + VHGames</ion-footer-bar>
     </ion-pane>
   </body>
 </html>
