rota ok stateparams !ok :(

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/routes.js"></script>
     <script src="js/service.js"></script>
     <script src="js/controllers/listaPokemons.controller.js"></script>
+    <script src="js/controllers/pokemon.controller.js"></script>
   </head>
   <body ng-app="starter">
 
@@ -47,7 +48,7 @@
           <ion-nav-title>Pokemón</ion-nav-title>
         </ion-nav-bar>
       </ion-nav-view>
-      <ion-footer-bar>subCUBE + VHGames</ion-footer-bar>
+      <ion-footer-bar>subCUBE + VHGames + Turboel</ion-footer-bar>
     </ion-pane>
   </body>
 </html>
