--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
 
         <ion-nav-bar class="bar-positive">
           <ion-nav-back-button></ion-nav-back-button>
-          <ion-nav-title>Pokémon</ion-nav-title>
+          <!--<ion-nav-title>Pokémon</ion-nav-title>-->
         </ion-nav-bar>
        
       </ion-nav-view>
